--- a/generators/app/templates/flutter/flutter-app/lib/main/bloc/main_state.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main/bloc/main_state.dart.ejs
@@ -9,7 +9,7 @@ class MainState extends Equatable {
   });
 
   MainState copyWith({
-    User currentUser,
+    User? currentUser,
   }) {
     return MainState(
       currentUser: currentUser ?? this.currentUser,
