--- a/generators/app/templates/flutter/flutter-app/lib/shared/models/jwt_token.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/models/jwt_token.dart.ejs
@@ -4,7 +4,7 @@ import 'package:dart_json_mapper/dart_json_mapper.dart';
 class JWTToken {
 
   @JsonProperty(name: 'id_token')
-  String idToken;
+  String? idToken;
 
 
   @override
