--- a/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/bloc/drawer_state.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/bloc/drawer_state.dart.ejs
@@ -9,7 +9,7 @@ class DrawerState extends Equatable {
   });
 
   DrawerState copyWith({
-    bool isLogout,
+    bool? isLogout,
   }) {
     return DrawerState(
       isLogout: isLogout ?? this.isLogout,
