--- a/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/drawer_widget.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/drawer_widget.dart.ejs
@@ -9,7 +9,7 @@ import 'package:flutter/material.dart';
 // jhipster-merlin-needle-menu-import-entry-add
 
 class <%= camelizedUpperFirstBaseName %>Drawer extends StatelessWidget {
-   <%= camelizedUpperFirstBaseName %>Drawer({Key key}) : super(key: key);
+   <%= camelizedUpperFirstBaseName %>Drawer({Key? key}) : super(key: key);
 
    static final double iconSize = 30;
 
