--- a/generators/app/templates/flutter/flutter-app/lib/account/login/bloc/login_events.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/login/bloc/login_events.dart.ejs
@@ -13,7 +13,7 @@ abstract class LoginEvent extends Equatable {
 class LoginChanged extends LoginEvent {
   final String login;
 
-  const LoginChanged({@required this.login});
+  const LoginChanged({required this.login});
 
   @override
   List<Object> get props => [login];
@@ -22,7 +22,7 @@ class LoginChanged extends LoginEvent {
 class PasswordChanged extends LoginEvent {
   final String password;
 
-  const PasswordChanged({@required this.password});
+  const PasswordChanged({required this.password});
 
   @override
   List<Object> get props => [password];
