--- a/generators/app/templates/flutter/flutter-app/lib/account/login/login_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/login/login_screen.dart.ejs
@@ -14,7 +14,7 @@ import 'bloc/login_models.dart';
 
 
 class LoginScreen extends StatelessWidget {
-  LoginScreen({Key key}) : super(key: <%= camelizedUpperFirstBaseName %>Keys.mainScreen);
+  LoginScreen({Key? key}) : super(key: <%= camelizedUpperFirstBaseName %>Keys.mainScreen);
 
   @override
   Widget build(BuildContext context) {
@@ -116,7 +116,7 @@ class LoginScreen extends StatelessWidget {
               child: Center(
                 child: Text(
                   generateError(state, context),
-                  style: TextStyle(fontSize: Theme.of(context).textTheme.bodyText1.fontSize, color: Theme.of(context).errorColor),
+                  style: TextStyle(fontSize: Theme.of(context).textTheme.bodyText1!.fontSize, color: Theme.of(context).errorColor),
                   textAlign: TextAlign.center,
                 ),
               ));
