--- a/generators/app/templates/flutter/flutter-app/lib/account/register/bloc/register_bloc.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/register/bloc/register_bloc.dart.ejs
@@ -14,7 +14,7 @@ part 'register_state.dart';
 class RegisterBloc extends Bloc<RegisterEvent, RegisterState> {
   final AccountRepository _accountRepository;
 
-  RegisterBloc({@required AccountRepository accountRepository}) : assert(accountRepository != null),
+  RegisterBloc({required AccountRepository accountRepository}) :
         _accountRepository = accountRepository, super(const RegisterState());
 
   static final String passwordNotIdenticalKey = 'error.passwordnotidentical';
@@ -48,8 +48,8 @@ class RegisterBloc extends Bloc<RegisterEvent, RegisterState> {
       yield state.copyWith(status: FormzStatus.submissionInProgress);
       User newUser = new User(state.login.value, state.email.value, state.password.value, 'en', null, null);
       try {
-        String result = await _accountRepository.register(newUser);
-        if (result.compareTo(HttpUtils.successResult) != 0) {
+        String? result = await _accountRepository.register(newUser);
+        if (result != null && result.compareTo(HttpUtils.successResult) != 0) {
           yield state.copyWith(status: FormzStatus.submissionFailure, generalErrorKey: result);
         } else {
           yield state.copyWith(status: FormzStatus.submissionSuccess);
