--- a/generators/app/templates/flutter/flutter-app/lib/account/register/bloc/register_models.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/register/bloc/register_models.dart.ejs
@@ -17,7 +17,7 @@ class LoginInput extends FormzInput<String, LoginValidationError> {
   static final int numberMin = 3;
 
   @override
-  LoginValidationError validator(String value) {
+  LoginValidationError? validator(String value) {
     return value.length >= 3 ? null : LoginValidationError.invalid;
   }
 }
@@ -33,7 +33,7 @@ class EmailInput extends FormzInput<String, EmailValidationError> {
   const EmailInput.dirty([String value = '']) : super.dirty(value);
 
   @override
-  EmailValidationError validator(String value) {
+  EmailValidationError? validator(String value) {
     return value.contains('@') ? null : EmailValidationError.invalid;
   }
 }
@@ -52,7 +52,7 @@ class PasswordInput extends FormzInput<String, PasswordValidationError> {
   static final int numberMin = 8;
 
   @override
-  PasswordValidationError validator(String value) {
+  PasswordValidationError? validator(String value) {
     return _passwordRegex.hasMatch(value) ? null : PasswordValidationError.invalid;
   }
 }
@@ -71,7 +71,7 @@ class ConfirmPasswordInput extends FormzInput<String, ConfirmPasswordValidationE
   static final int numberMin = 8;
 
   @override
-  ConfirmPasswordValidationError validator(String value) {
+  ConfirmPasswordValidationError? validator(String value) {
     return _passwordRegex.hasMatch(value) ? null : ConfirmPasswordValidationError.invalid;
   }
 }
@@ -83,7 +83,7 @@ class TermsAndConditionsInput extends FormzInput<bool, TermsAndConditionsValidat
   const TermsAndConditionsInput.dirty([bool value = false]) : super.dirty(value);
 
   @override
-  TermsAndConditionsValidationError validator(bool value) {
+  TermsAndConditionsValidationError? validator(bool value) {
     return value ? null : TermsAndConditionsValidationError.invalid;
   }
 }
