--- a/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/app.dart.ejs
@@ -22,7 +22,7 @@ import 'generated/l10n.dart';
 // jhipster-merlin-needle-import-add - JHipster will add new imports here
 
 class <%= camelizedUpperFirstBaseName %>App extends StatelessWidget {
-  const <%= camelizedUpperFirstBaseName %>App({Key key}) : super(key: key);
+  const <%= camelizedUpperFirstBaseName %>App({Key? key}) : super(key: key);
 
   @override
   Widget build(BuildContext context) {
