--- a/generators/app/templates/flutter/flutter-app/lib/environment.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/environment.dart.ejs
@@ -1,7 +1,7 @@
 enum Environment { DEV, PROD }
 
 class Constants {
-  static Map<String, dynamic> _config;
+  static Map<String, dynamic>? _config;
   <%_ if (enableTranslation) { _%>
   static final Map<String, String> languages = {'en':'English','fr':'Francais'};
   static final String langStorageKey = 'locale';
@@ -19,7 +19,7 @@ class Constants {
   }
 
   static get api {
-    return _config[_Config.API];
+    return _config![_Config.API];
   }
 }
 
