--- a/generators/app/templates/flutter/flutter-app/lib/main/bloc/main_bloc.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main/bloc/main_bloc.dart.ejs
@@ -16,7 +16,7 @@ part 'main_state.dart';
 class MainBloc extends Bloc<MainEvent, MainState> {
   final AccountRepository _accountRepository;
 
-  MainBloc({@required AccountRepository accountRepository}) : assert(accountRepository != null),
+  MainBloc({required AccountRepository accountRepository}) :
         _accountRepository = accountRepository, super(const MainState());
 
   @override
@@ -35,8 +35,8 @@ class MainBloc extends Bloc<MainEvent, MainState> {
     User currentUser = await _accountRepository.getIdentity();
 
 <%_ if (enableTranslation) { _%>
-    if(currentUser.langKey.compareTo(S.current.locale) != 0) {
-      S.load(Locale(currentUser.langKey));
+    if(currentUser.langKey!.compareTo(S.current.locale) != 0) {
+      S.load(Locale(currentUser.langKey!));
     }
 <%_ } _%>
 
