--- a/generators/app/templates/flutter/flutter-app/lib/shared/widgets/loading_indicator_widget.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/widgets/loading_indicator_widget.dart.ejs
@@ -4,7 +4,7 @@ import 'package:<%= baseName %>/generated/l10n.dart';
 <%_ } _%>
 
 class LoadingIndicator extends StatelessWidget {
-  LoadingIndicator({Key key}) : super(key: key);
+  LoadingIndicator({Key? key}) : super(key: key);
 
   @override
   Widget build(BuildContext context) {
